--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MeetUpVancouver</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">MeetUpVancouver</string>
     <string name="title_text">Google Sign-In</string>
 
 
